--- a/dindin-js-dom/index.html
+++ b/dindin-js-dom/index.html
@@ -26,7 +26,7 @@
     </style>
   </head>
 
-  <body>
+  <body onload="onLoadHome()">
     <header>
       <div id="cabecalho">
         <div id="logo_cabecalho">
