feat: busca cep

--- a/promises/index.html
+++ b/promises/index.html
@@ -21,7 +21,6 @@
           <input
             type="text"
             id="cep"
-            pattern="\d{5}-?\d{3}"
             class="form-control"
             required
             placeholder="Insira o seu CEP"
@@ -70,7 +69,7 @@
         <button type="submit" id="btnPesquisar" class="btn btn-primary">
           Pesquisa
         </button>
-        <button type="button" id="btnLimpar" class="btn btn-danger">
+        <button type="reset" id="btnLimpar" class="btn btn-danger">
           Limpar
         </button>
       </form>
@@ -82,5 +81,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
   </body>
 </html>
